NetworkPolicy/AdService-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice-network-policy
  namespace: online-shop-microservices
spec:
  podSelector:
    matchLabels:
        app: adservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
               app: frontend
      ports:
        - protocol: TCP
          port: 9555
