NetworkPolicy/CartService-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cartservice-network-policy
  namespace: online-shop-microservices
spec:
  podSelector:
    matchLabels:
           app: cartservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                 app: frontend 
          ports:
            - protocol: TCP
              port: 7070
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                app: checkoutservice
          ports:
            - protocol: TCP
              port: 7070
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                 app: redis
          ports:
            - protocol: TCP
              port: 6379
