NetworkPolicy/CurrencyService-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currencyservice-network-policy
  namespace: online-shop-microservices
spec:
  podSelector:
    matchLabels:
           app: currencyservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                 app: frontend 
      ports:
            - protocol: TCP
              port: 7000
    - from:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                app: checkoutservice
      ports:
            - protocol: TCP
              port: 7000
