NetworkPolicy/Frontend-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: online-shop-microservices
spec:
  podSelector:
    matchLabels:
           app: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock: 
             cidr: 0.0.0.0/0
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                  app: cartservice
          ports:
            - protocol: TCP
              port: 7070
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                app: productcatalogservice
          ports:
            - protocol: TCP
              port: 3550
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                 app: currencyservice
          ports:
            - protocol: TCP
              port: 7000

        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                   app: shippingservice
          ports:
            - protocol: TCP
              port: 50051
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                 app: recommedationservice
          ports:
            - protocol: TCP
              port: 8080
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                  app: checkoutservice
          ports:
            - protocol: TCP
              port: 5050
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                  app: adservice
          ports:
            - protocol: TCP
              port: 9555
