NetworkPolicy/PaymentService-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paymentservice-network-policy
  namespace: online-shop-microservices
spec:
  podSelector:
    matchLabels:
          app: paymentservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                app: checkoutservice
      ports:
            - protocol: TCP
              port: 50051
