NetworkPolicy/ProductCatalogService-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-network-policy
  namespace: online-shop-microservices
spec:
  podSelector:
    matchLabels:
          app: productcatalogservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                 app: frontend 
          ports:
            - protocol: TCP
              port: 3550
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                app: recommedationservice
          ports:
            - protocol: TCP
              port: 3550
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                app: checkoutservice
          ports:
            - protocol: TCP
              port: 3550
