NetworkPolicy/RecommendationService-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: recommedationservice-network-policy
  namespace: online-shop-microservices
spec:
  podSelector:
    matchLabels:
        app: recommedationservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                 app: frontend 
      ports:
            - protocol: TCP
              port: 8080

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                 app: productcatalogservice
      ports:
            - protocol: TCP
              port: 3550
