NetworkPolicy/Redis-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  namespace: online-shop-microservices
spec:
  podSelector:
    matchLabels:
          app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
               app: cartservice
          ports:
            - protocol: TCP
              port: 6379
