NetworkPolicy/ShippingService-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shippingservice-network-policy
  namespace: online-shop-microservices
spec:
  podSelector:
    matchLabels:
          app: shippingservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                 app: frontend 
          ports:
            - protocol: TCP
              port: 50051
        - namespaceSelector:
            matchLabels:
               name: microservices
          podSelector:
            matchLabels:
                app: checkoutservice
          ports:
            - protocol: TCP
              port: 50051
